@@ -10,7 +10,7 @@
   <table border="0" cellspacing="0" cellpadding="5" style="width:100%; background:#C0C0C0;">
    <tr style="vertical-align:middle">
     <td style="text-align:left">
-     <span style="font-size: 24pt; font-weight: bold;">Header using styles</span>
+     <span style="font-size: 24pt; font-weight: bold; background-color: #00BF00;">Header using styles</span>
     </td>
 
     <td style="text-align:right">
